deploy/notificationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
  namespace: default
  labels:
    app: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "notificationservice"
        dapr.io/app-port: "80"
        dapr.io/config: "zipkin"
        dapr.io/sidecar-liveness-probe-period-seconds: "20"
        dapr.io/sidecar-readiness-probe-period-seconds: "20"
    spec:
      containers:
      - name: notificationservice
        image: quoctuan/notificationservice:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: notificationservice
