deploy/orderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  namespace: default
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "orderservice"
        dapr.io/app-port: "80"
        dapr.io/config: "zipkin"
        dapr.io/sidecar-liveness-probe-period-seconds: "20"
        dapr.io/sidecar-readiness-probe-period-seconds: "20"
    spec:
      containers:
      - name: orderservice
        image: quoctuan/orderservice:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: orderservice
