deploy/seq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq
  namespace: default
  labels:
    app: seq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq
  template:
    metadata:
      labels:
        app: seq
    spec:
      containers:
      - name: seq
        image: datalust/seq:latest
        ports:
        - containerPort: 80
---

kind: Service
apiVersion: v1
metadata:
  name: seq
  namespace: default
  labels:
    app: seq
spec:
  selector:
    app: seq
  type: ClusterIP
  ports:
  - port: 80
